refactoring in .py file

--- a/movie_rec_app.ipynb
+++ b/movie_rec_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dd8c950b",
    "metadata": {},
    "outputs": [],
@@ -10,8 +10,7 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark.ml.recommendation import ALS\n",
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
-    "from pyspark.sql import functions as sf\n",
-    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType"
+    "\n"
    ]
   },
   {
@@ -426,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "803de7ba",
    "metadata": {},
    "outputs": [
@@ -447,15 +446,28 @@
       "|  53123|     2|       4.5893817|         Once (2006)|Drama|Musical|Rom...|\n",
       "|   1732|     2|       4.5761437|Big Lebowski, The...|        Comedy|Crime|\n",
       "|   2843|     2|        4.561259|Black Cat, White ...|      Comedy|Romance|\n",
+      "|   6835|     3|        4.905354|Alien Contaminati...|Action|Horror|Sci-Fi|\n",
+      "|   5746|     3|        4.905354|Galaxy of Terror ...|Action|Horror|Mys...|\n",
+      "|   5181|     3|        4.848927|    Hangar 18 (1980)|Action|Sci-Fi|Thr...|\n",
+      "|  74754|     3|        4.795737|    Room, The (2003)|Comedy|Drama|Romance|\n",
+      "|   4518|     3|       4.7803164|The Lair of the W...|       Comedy|Horror|\n",
+      "|   1611|     4|       5.0496364|My Own Private Id...|       Drama|Romance|\n",
+      "|   1212|     4|        4.964766|Third Man, The (1...|Film-Noir|Mystery...|\n",
+      "|   3851|     4|        4.935221|I'm the One That ...|              Comedy|\n",
+      "|   1733|     4|        4.887687|    Afterglow (1997)|       Drama|Romance|\n",
+      "|   1046|     4|       4.8553886|Beautiful Thing (...|       Drama|Romance|\n",
+      "|   1203|     5|       4.8973293| 12 Angry Men (1957)|               Drama|\n",
+      "|  55276|     5|        4.723255|Michael Clayton (...|      Drama|Thriller|\n",
+      "|   3494|     5|       4.6775494|    True Grit (1969)|Adventure|Drama|W...|\n",
+      "|   2804|     5|        4.650452|Christmas Story, ...|     Children|Comedy|\n",
+      "|   5915|     5|       4.6366687|Victory (a.k.a. E...|    Action|Drama|War|\n",
+      "|  74282|     6|       4.8354287|Anne of Green Gab...|Children|Drama|Ro...|\n",
+      "|  33649|     6|       4.7105784|  Saving Face (2004)|Comedy|Drama|Romance|\n",
+      "| 106100|     6|        4.706919|Dallas Buyers Clu...|               Drama|\n",
+      "|  97304|     6|        4.694708|         Argo (2012)|      Drama|Thriller|\n",
+      "|  65188|     6|       4.6521077|Dear Zachary: A L...|         Documentary|\n",
       "+-------+------+----------------+--------------------+--------------------+\n",
-      "only showing top 10 rows\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
+      "only showing top 30 rows\n"
      ]
     }
    ],
